fixed the spacing

--- a/css/style.css
+++ b/css/style.css
@@ -790,6 +790,7 @@
 .section-6-inner {
     width: 90%;
     color: #000000;
+    margin-bottom: 50px;
 }
 
 .section-6-heading {
@@ -813,6 +814,7 @@
     max-width: 100%;
     height: auto;
     margin-left: 100px;
+    
 
 }
 
